<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sofundal"
    android:backgroundTint="#38605F"
    android:backgroundTintMode="screen"
    tools:context=".SoActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvScor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/scor_text"
        android:textColor="#4169e1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIntrebare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="543dp"
        android:padding="50dp"
        android:text="@string/intrebare_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="411dp"
        android:layout_height="509dp"
        android:layout_below="@+id/tvScor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/btnRaspA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:padding="20dp"
            android:text="@string/rasp_a_text"
            app:layout_constraintBottom_toTopOf="@+id/btnRaspB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/btnRaspB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:text="@string/rasp_b_text"
            app:layout_constraintBottom_toTopOf="@+id/btnRaspC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/btnRaspC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:text="@string/rasp_c_text"
            app:layout_constraintBottom_toTopOf="@id/btnRaspD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/btnRaspD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:minHeight="48dp"
            android:padding="20dp"
            android:text="@string/rasp_d_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnNextg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvNrintr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="NrINtrebarii: No1/No2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>